--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "schoolinka-web",
   "private": true,
-  "version": "0.0.1",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "start": "serve dist -s -n -L -p 3000",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -18,6 +19,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-modal-sheet": "^2.0.0",
+    "serve": "^14.2.1",
     "swiper": "^10.2.0"
   },
   "devDependencies": {
