--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "start": "serve dist -s -n -L -p 3000",
+    "start": "serve dist -s -n -L -p $PORT",
     "preview": "vite preview"
   },
   "dependencies": {
